--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,7 @@
     "license": "MIT",
     "require": {
         "php": "^8.0.2",
+        "bensampo/laravel-enum": "^6.0",
         "guzzlehttp/guzzle": "^7.2",
         "laravel-lang/lang": "~10.3",
         "laravel/framework": "^9.19",
