--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,8 @@
         "laravel-lang/lang": "~10.3",
         "laravel/framework": "^9.19",
         "laravel/sanctum": "^3.0",
-        "laravel/tinker": "^2.7"
+        "laravel/tinker": "^2.7",
+        "laravel/ui": "^4.0"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
