--- a/package.json
+++ b/package.json
@@ -10,13 +10,16 @@
         "production": "mix --production"
     },
     "devDependencies": {
+        "@popperjs/core": "^2.10.2",
         "@tailwindcss/forms": "^0.5.2",
         "alpinejs": "^3.4.2",
         "autoprefixer": "^10.4.2",
         "axios": "^0.27",
+        "bootstrap": "^5.2.1",
         "laravel-mix": "^6.0.49",
         "lodash": "^4.17.19",
         "postcss": "^8.4.6",
+        "sass": "^1.32.11",
         "tailwindcss": "^3.1.0"
     }
 }
