--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,7 @@
     "require": {
         "php": "^8.0.2",
         "bensampo/laravel-enum": "^6.0",
+        "doctrine/dbal": "^3.4",
         "guzzlehttp/guzzle": "^7.2",
         "laravel-lang/lang": "~10.3",
         "laravel/framework": "^9.19",
